[metadata]
name = NICpolpy
version = 0.1.3
description = Nishi-Harima Astronomical Observatory (NHAO) Near-Infrared Camera (NIC) polarimetry pipeline.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ysBach/NICpolpy
author = Yoonsoo P. Bach
author_email = ysbach93@gmail.com,
license = BSD 3-clause
license_file = LICENSE
keywords = astronomy, polarimetry, near-infrared, data reduction, image analysis, Nishi-Harima Astronomical Observatory
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Source = https://github.com/ysBach/NICpolpy
    Tracker = https://github.com/ysBach/NICpolpy/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    bottleneck
    astroscrappy
    sep
    astroquery
    tqdm
    pandas > 1.0
    astropy >= 5.0
    photutils >= 0.7
    ccdproc >= 1.3
    matplotlib >= 3
zip_safe = False
platforms = any
include_package_data = True
setup_requires =
    setuptools_scm

[options.package_data]
* = *.md